Added README - Andy 17/03/2003
Tweaked POD