@@ -1,4 +1,4 @@
-WWW/Search/Jobserve version 1.01
+WWW/Search/Jobserve version 1.02
 ==============================
 
 INTRODUCTION
