@@ -1,2 +1,3 @@
+Altered parse_tree to skip <a href that didnt match ?jobid= strings
 Added README - Andy 17/03/2003
 Tweaked POD
